--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,6 @@
-# ---------------------------
-# Python
-# ---------------------------
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.db
-*.sqlite3
-*.egg
-*.egg-info/
-dist/
-build/
-.eggs/
-*.manifest
-*.spec
-
-# Virtual environments
-.env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# ---------------------------
-# Docker
-# ---------------------------
-*.log
-docker-compose.override.yml
-
-# ---------------------------
 # Environment variables
-# ---------------------------
 .env
 
-# ---------------------------
-# IDE / Editor files
-# ---------------------------
-.vscode/
-.idea/
-*.swp
-*.swo
+# Python cache files (in case you add code and run it later)
+__pycache__/
+*.pyc
