--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,25 @@
-version: "3.8"
+version: "3.9"
 
 services:
   backend:
-    build: ./backend
+    build: ./Backend
+    container_name: backend
     ports:
       - "5000:5000"
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: appdb
-      POSTGRES_HOST: db
-      REDIS_HOST: redis
     depends_on:
       - db
-      - redis
 
   db:
-    image: postgres:14
-    restart: always
+    image: postgres:13
+    container_name: db
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: appdb
+      POSTGRES_DB: mydb
+    ports:
+      - "5432:5432"
     volumes:
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - db_data:/var/lib/postgresql/data
 
-  redis:
-    image: redis:6
-    restart: always
+volumes:
+  db_data:
